<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <TextView
            android:id="@+id/verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/text_font"
            android:text="Verify your phone number"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/text_font"
            android:text="@string/SmsMessage"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:textStyle="normal" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            app:ccp_autoDetectCountry="true"
            app:ccp_defaultNameCode="bd" />

        <EditText
            android:id="@+id/number_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ccp"
            android:layout_marginTop="10dp"
            android:hint="phone number"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="15dp"
            android:fontFamily="@font/text_font"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right|bottom"
            android:layout_margin="16dp"
            android:background="@color/colorAccent"
            android:text="Next"
            android:textAllCaps="false"
            android:fontFamily="@font/text_font"
            android:textColor="@android:color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/verify_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/verify_message"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp"
                    android:fontFamily="@font/text_font"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:fontFamily="@font/text_font"
                    android:text="@string/verification"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/otp_code"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:fontFamily="@font/text_font"
                    android:hint="enter verification code"
                    android:inputType="number"
                    android:keepScreenOn="false"
                    android:paddingLeft="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/hint_color"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/confirm_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/colorAccent"
                    android:text="Confirm"
                    android:fontFamily="@font/text_font"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/received"
                        android:textColor="@color/colorAccent"
                        android:textSize="14sp"
                        android:fontFamily="@font/text_font"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/resend_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:padding="20dp"
                        android:fontFamily="@font/text_font"
                        android:text="Resend"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Profile info"
            android:fontFamily="@font/text_font"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messagetwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pro"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:fontFamily="@font/text_font"
            android:text="@string/smsMessageTwo"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textColor="@color/colorAccent"
            android:textStyle="normal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messagetwo"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:src="@drawable/profile"
                app:civ_border_color="@android:color/black"
                app:civ_border_width="4dp" />

            <EditText
                android:id="@+id/name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/text_font"
                android:hint="Type your name here" />

        </LinearLayout>

        <Button
            android:id="@+id/finishBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center|bottom"
            android:layout_margin="16dp"
            android:text="Next"
            android:fontFamily="@font/text_font"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            android:textAllCaps="false" />

    </RelativeLayout>

</RelativeLayout>